<resources>
    <string name="app_name">Chat App</string>
    <string name="appname">Connectez vous pour discuter !</string>
    <string name="login">Login :</string>
    <string name="passe">Mot de passe :</string>
    <string name="remember">Se souvenir de moi</string>
    <string name="choix_conversation">Choisissez une conversation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">TestActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="action_settings">Préférences</string>
    <string name="action_account">Mon Compte</string>
    <string name="send">Send</string>
    <string name="validate">OK</string>
    <string name="mon_compte">Mon Compte</string>
    <string name="conversation">Conversation</string>
    <string name="preferences">Préférences</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="title_activity_compte">Compte</string>
    <string name="title_activity_choix_conversation">ChoixConversation</string>
    <string name="title_activity_show_conversation">ShowConversation</string>
    <string-array name="couleurs">
        <item>red</item>
        <item>green</item>
        <item>blue</item>
    </string-array>
    <string name="title_activity_choix_conv">ChoixConvActivity</string>
    <string name="couleur">Couleur Préférée :</string>

</resources>