<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    android:gravity="center_horizontal|right"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    tools:ignore="RtlHardcoded">

<!--    android:paddingBottom="@dimen/activity_vertical_margin"-->
<!--    android:paddingLeft="@dimen/activity_horizontal_margin"-->
<!--    android:paddingRight="@dimen/activity_horizontal_margin"-->
<!--    android:paddingTop="@dimen/activity_vertical_margin"-->
<!--    tools:context=".LoginActivity"-->
<!--    tools:ignore="RtlHardcoded">-->

    <TextView
        android:id="@+id/compte_titre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/mon_compte"
        android:textColor="@color/black"
        android:textSize="20pt"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/compte_labelLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/compte_edtLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:ems="10">

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/compte_labelPasse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passe"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/compte_edtPasse"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:ems="10" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/compte_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/couleur"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/compte_listeAvatars"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:entries="@array/couleurs" />

    </LinearLayout>

    <Button
        android:id="@+id/compte_btnOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:text="@string/ok" />

</LinearLayout>